---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2025-03-21
  Changes:
    - Ores related to Nauvis will not spawn on snow or ice
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2025-03-14
  Changes:
    - Gleba tiles absorb pollution
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2025-02-19
  Modding:
    - Added space travel flag
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2025-02-02
  Bugfixes:
    - Now the menu simulations are fixed for good
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2025-01-30
  Bugfixes:
    - Removed some menu simulations which could crash the game
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2025-01-19
  Bugfixes:
    - Calcite and Tungsten ore wont spawn on ammonia oceans
  Modding:
    - Resource changes to tungsten ore and calcite are now done in data instead of data-final-fixes
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2025-01-19
  Features:
    - This version was played from finish through end
    - Added descriptions to resources
    - Tungsten ore and calcite now spawn like normal nauvis ores
  Bugfixes:
    - Removed startup settings which did not do anything.
    - Removed small lava patches around the map (or at least the ones that i carefully checked out :))
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 2025-01-18
  Bugfixes:
    - Heating tower unlocked after concrete
    - lithium processing is now unlockable